Implemented Flexbox and Changed the website color

--- a/Homepage.html
+++ b/Homepage.html
@@ -8,9 +8,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <style>
         body{
-            margin: 1.5rem;
+            height: 100vh;
+            padding: 0;
+            margin: 0;
         }
 
+        .container{
+            display: inline-flex;
+            flex-direction: column;
+            background-color: black;
+            color:rgba(239, 228, 169, 0.461);
+        }
+
+        a:link {
+            color: rgba(239, 228, 169, 0.461);
+        }
     </style>
 </head>
 <body>
@@ -20,7 +32,7 @@
                 <h1 id="text">Oluwafunmbi Akinsanya</h1>
                 <p id="info">
                     Phone: 443-929-0337<br/>
-                    Email:<a href="akinsanyafunmbi@gmail.com">akinsanyafunmbi@gmail.com</a>
+                    Email:<a href="akinsanyafunmbi@gmail.com"> akinsanyafunmbi@gmail.com</a>
                 </p>
             </div>
         </div>
