added the peofile picture and more css

--- a/Homepage.html
+++ b/Homepage.html
@@ -13,7 +13,7 @@
             margin: 0;
         }
 
-        .container{
+        .container {
             display: inline-flex;
             flex-direction: column;
             background-color: black;
@@ -23,12 +23,23 @@
         a:link {
             color: rgba(239, 228, 169, 0.461);
         }
+
+        img{
+            border-radius: 100%;
+            float: left;
+        }
+
+        .introduction{
+            float: left;
+    
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="introduction">
+                <img src="./Funmbi.JPG" height="175"/>
                 <h1 id="text">Oluwafunmbi Akinsanya</h1>
                 <p id="info">
                     Phone: 443-929-0337<br/>
