--- a/Homepage.html
+++ b/Homepage.html
@@ -13,8 +13,9 @@
         }
 
         body{
-            background-color: black;
-            color:rgba(239, 228, 169, 0.461);
+            background-color:#ECF0F1;
+            /* color:rgba(239, 228, 169, 0.461); */
+            color:#2C3E50;
         }
         .container{
             display: inline-flex;
@@ -46,15 +47,20 @@
             align-self: flex-start ;
         }
 
+        .intro p .note{
+            color: #E67E22;
+            text-decoration: underline;
+        }
+
         .about-me{
-            border: 3px rgba(239, 228, 169, 0.461) solid;
+            border: 3px ;
             width: 100%;
             max-width: 800px;
             text-align: justify;
         }
 
           a:link {
-            color: rgba(239, 228, 169, 0.461);
+            color: #E67E22;
         }
 
         .skills-container{
@@ -63,7 +69,7 @@
             margin: 20px;
             align-self: flex-start;
             text-align: justify;
-            border: 3px rgba(239, 228, 169, 0.461) solid;
+            border: 3px;
         }
 
         .skills-container ul{
@@ -75,7 +81,7 @@
             max-width: 800px;
             margin: 20px;
             text-align: justify;
-            border: 3px rgba(239, 228, 169, 0.461) solid;
+            border: 3px;
         }
 
         .experience-container ul{
@@ -91,7 +97,7 @@
             max-width: 800px;
             margin: 20px;
             text-align:justify;
-            border: 3px rgba(239, 228, 169, 0.461) solid;
+            border: 3px;
         }
 
         .projects-container ul{
@@ -102,7 +108,7 @@
             width:70%;
             align-self: center;
             text-align: center;
-            border: 3px rgba(239, 228, 169, 0.461) solid;
+            border: 3px;
         }
 
         .education-container ul{
@@ -127,7 +133,7 @@
             </p>
         </div>
             <div class="intro">
-                <p> Hi, like the title says my name is Oluwafunmbi Akinsnaya, although you can just call me Funmbi, 
+                <p> <span class="note">NOTE:</span> Hi, like the title says my name is Oluwafunmbi Akinsnaya, although you can just call me Funmbi, 
                     welcome to my website. The goal of this is to show my experience using HTML and CSS, so all this was 
                     built using the aforementioned technique, but for the CSS, I primarily focused on using just flexbox.
                      Thanks for stopping by, feel free to mess around lol.
@@ -175,7 +181,7 @@
                 <ul>
                     <li>
                         Collaborated with a team of engineers to design Klasconnect 
-                        learning management software which is used to improve learning outcomes in Nigeria
+                        learning management software which is used to improve learning outcomes in Nigeria.
                     </li>
                     <li>
                         Collaborated with the IT team to design and deploy the Gitlab CI/CD pipeline which is used to manage code 
@@ -199,7 +205,7 @@
                     </li>
                     <li>
                         Respond to security alerts by investigating potential security issues, performing root cause analysis, 
-                        and implementing remediation actions to mitigate risks
+                        and implementing remediation actions to mitigate risks.
                     </li>
                     <li>
                         Provide security training and raise awareness among team members regarding 
@@ -219,7 +225,7 @@
                     </li>
                     <li>
                         Provisioning a secure environment for the AWS VPC network and implementing infrastructure as code using configuration management tools, 
-                        Implementing CI/CD pipelines using Jenkins and monitoring infrastructure
+                        Implementing CI/CD pipelines using Jenkins and monitoring infrastructure.
                     </li>
                     <li>
                         Migration of customers' on-premises workloads(applications) to the AWS cloud platform. 
@@ -231,7 +237,7 @@
                     </li>
                     <li>
                         Perform S3 buckets creation, access policies, and archive outdated data to Glacier through Lifecycle Policy Enforcing 
-                        company’s policies and procedures during design and implementation
+                        company’s policies and procedures during design and implementation.
                     </li>
                     <li>
                         Defining and deploying monitoring metrics, and logging systems on AWS environment. Application and system 
@@ -242,6 +248,7 @@
                     </li>
                 </ul>
             </div>
+            <br/>
             <div>
                 <p id="experience">
                     Eastern Nazarene College<br/>
