--- a/Homepage.html
+++ b/Homepage.html
@@ -7,8 +7,70 @@
     <link href="./homepage_style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+
         body{
-            margin: 1.5rem;
+            background-color: #FFFFF0;
+            color: #2F4F4F;
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        .container{
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: 10% 9% auto auto;
+            gap: 1.5rem;
+        }
+
+        .header{
+            grid-column: span 4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .about-me{
+            border: gray solid 2px;
+            grid-column: span 4;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .my-skills{
+            border: gray solid 2px;
+            display: flex;
+            justify-content: center;
+            margin-left: 15px;
+        }
+
+        .my-experience{
+            border: gray solid 2px;
+            grid-area: 3 / 2 / 3 / 4;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        .projects{
+            border: gray solid 2px;
+            grid-area: 3 / 4 / 3 / -2;
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            margin-right: 15px;
+        }
+
+        .education{
+            grid-area: 4 / 1 / 4 / -2;
+            grid-column: span 4;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
     </style>
@@ -130,7 +192,7 @@
                     </li>
                     <li>
                         Design, develop, and implement high availability, backup, and recovery strategies for applications and databases. 
-                    </li>
+                    </li><br>
                 </ul>
             </div>
             <div>
