modified the colors and styling

--- a/Homepage.html
+++ b/Homepage.html
@@ -13,8 +13,8 @@
         }
 
         body{
-            background-color: #FFFFF0;
-            color: #2F4F4F;
+            background-color: #FAF9F6;
+            color: #008080;
             font-family: 'Times New Roman', Times, serif;
         }
 
@@ -30,47 +30,73 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: #001F54;
+            color: #FFFFFF;
         }
 
         .about-me{
-            border: gray solid 2px;
+            border: #36454F solid 2px;
+            border-radius: 10px;
             grid-column: span 4;
             justify-content: center;
             align-items: center;
+            text-align: justify;
+            padding: 10px;
+            background-color: #E0F7FA;
+            color: #001F54;
         }
 
         .my-skills{
-            border: gray solid 2px;
+            border: #36454F solid 2px;
+            border-radius: 10px;
             display: flex;
             justify-content: center;
-            margin-left: 15px;
+            text-align: justify;
+            padding: 15px;
+            background-color: #FFFFFF;
+            color: #001F54;
         }
 
         .my-experience{
-            border: gray solid 2px;
+            border: #36454F solid 2px;
+            border-radius: 10px;
             grid-area: 3 / 2 / 3 / 4;
             display: flex;
             justify-content: flex-start;
             align-items: center;
             flex-wrap: wrap;
+            text-align: justify;
+            padding: 15px;
+            background-color: #F4F4F9;
+            color: #001F54;
         }
 
         .projects{
-            border: gray solid 2px;
+            border: #36454F solid 2px;
+            border-radius: 10px;
             grid-area: 3 / 4 / 3 / -2;
             display: flex;
             justify-content: flex-start;
             flex-wrap: wrap;
-            margin-right: 15px;
+            text-align: justify;
+            padding: 15px;
+            background-color: #DDE7F0; /* Light Gray */
+            color: #001F54; /* Navy Blue text */
         }
 
         .education{
+            border: #36454F solid 2px;
+            border-radius: 10px;
             grid-area: 4 / 1 / 4 / -2;
             grid-column: span 4;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            text-align: justify;
+            padding: 10px;
+            background-color: #001F54; /* Sky Blue */
+            color: #FFFFFF; /* White text for readability */
         }
 
     </style>
