added a profile picture and some padding

--- a/Homepage.html
+++ b/Homepage.html
@@ -33,6 +33,13 @@
             background-color: #001F54;
             color: #FFFFFF;
         }
+        
+        .introduction  img{
+            border-radius: 50%;
+            float: left;
+            margin-top: 10px;
+            padding-right: 10px;
+        }
 
         .about-me{
             border: #36454F solid 2px;
@@ -105,9 +112,10 @@
     <div class="container">
         <div class="header">
             <div class="introduction">
+                <img src="./Funmbi.JPG" height="175"/>
                 <h1 id="text">Oluwafunmbi Akinsanya</h1>
                 <p id="info">
-                    Phone: 443-929-0337<br/>
+                    Phone: 443-929-0337
                     Email:<a href="akinsanyafunmbi@gmail.com">akinsanyafunmbi@gmail.com</a>
                 </p>
             </div>
@@ -131,8 +139,8 @@
                 <h2>Certifications and skills</h2>
                 <hr/>
                 <ul>
-                    <li>Operating System: RHEL (8.x/7.x/6.x), Windows (Server 2016, 2012), Centos, Ubuntu, Amazon Linux</li>
-                    <li>DevOps/CICD: CloudFormation, Terraform, Artificatory, AWS systems Manager, AWS Workspace</li>
+                    <li>Operating System: RHEL (8.x/7.x/6.x), Windows (Server 2016, 2012), Centos, Ubuntu, Amazon Linux.</li>
+                    <li>DevOps/CICD: CloudFormation, Terraform, Artificatory, AWS systems Manager, AWS Workspace.</li>
                     <li>Scripting: Shell, Bash, PowerShell, Python, AWS CLI, Azure CLI.</li>
                     <li>Project Management/Methodologies: Agile, SDLC, Scrum, JIRA, ITIL.</li>
                     <li>Networking/Security: TCP/IP, SSH, UDP, RDP, TELNET, DNS, DHCP, SSL/TLS, SMTP, LDAP, API Gateway, IAM, KMS, Splunk, AWS Elasticsearch.</li>
