Fixed responsiveness issue

--- a/Homepage.html
+++ b/Homepage.html
@@ -66,6 +66,7 @@
             padding: 15px;
             background-color: #FFFFFF;
             color: #001F54;
+            min-width: 200px;
         }
 
         .my-experience{
@@ -80,6 +81,7 @@
             padding: 15px;
             background-color: #F4F4F9;
             color: #001F54;
+            min-width: 300px;
         }
 
         .projects{
@@ -93,6 +95,7 @@
             padding: 15px;
             background-color: #DDE7F0; 
             color: #001F54;
+            min-width: 200px;
         }
 
         .education{
